--- a/back-end/app/templates/admin/admin_question.html
+++ b/back-end/app/templates/admin/admin_question.html
@@ -91,30 +91,30 @@
         >
           <div class="admin-header-container">
             <a href="{{ url_for('index') }}" class="admin-header-navlink">
-              <h1 class="admin-header-text"><span>Student Helper</span></h1>
+              <h1 class="admin-header-text"><span>SH Admin</span></h1>
             </a>
             <div class="admin-header-nav">
               <nav class="admin-navigation-links-admin-navigation-links">
                 <a
-                  href="admin_questions.html"
+                  href="{{ url_for('admin.questions') }}"
                   class="admin-navigation-links-navlink"
                 >
                   <span>Вопросы</span>
                 </a>
                 <a
-                  href="admin_assign_role.html"
+                  href="{{ url_for('admin.assign_role') }}"
                   class="admin-navigation-links-navlink1"
                 >
                   <span>Назначить роль</span>
                 </a>
                 <a
-                  href="admin_list_of_administrators.html"
+                  href="{{ url_for('admin.list_of_admins') }}"
                   class="admin-navigation-links-navlink2"
                 >
                   <span>Список модераторов</span>
                 </a>
                 <a
-                  href="admin_verifications.html"
+                  href="{{ url_for('admin.verifications') }}"
                   class="admin-navigation-links-navlink3"
                 >
                   <span>Заявки на верификацию</span>
@@ -151,43 +151,40 @@
                   ></path>
                 </svg>
               </button>
-              <span>+100500</span>
+              <span>{{ question.rate }}</span>
             </div>
-            <div class="admin-question-profile-info">
+            <div class="admin-question-profile-info" style="background-color: #c4dfe6ff">
               <span>
-                <span>Иван Иванов</span>
+                <span>{{ user.first_name }} {{ user.last_name }}</span>
                 <br />
                 <span></span>
                 <br />
-                <span>Воронежский Государственный Университет</span>
+                <span>{{ user.university }}</span>
                 <br />
                 <span></span>
+                {% if user.speciality %}
                 <br />
-                <span>Рейтинг: 357</span>
+                <span>Специальность: {{ user.speciality }}</span>
+                {% endif %}
+                <br />
+                <span>Рейтинг: {{ user.rate }}</span>
               </span>
             </div>
           </div>
           <div class="admin-question-question">
             <div class="admin-question-container3">
-              <span class="admin-question-text11">Мат. анализ</span>
-              <span class="admin-question-text12">7:56 15.04.2022</span>
+              <span class="admin-question-text11">{{ question.subject_tag }}</span>
+              {% set strdate = question.date_time|string %}
+              {% set date = strdate.split(' ') %}
+              <span class="admin-question-text12">{{ date[0] }}</span>
             </div>
-            <h1>Помогите взять интеграл, пж</h1>
+            <h1>{{ question.header }}</h1>
             <span class="admin-question-text14">
               <span>
-                Ребята, уже сил нет!!! Не могу взять интеграл! Пример интеграла
-                во вложениях!!
-              </span>
-              <br />
-              <span></span>
-              <br />
-              <span>
-                Какой-то текст. Какой-то текст. Какой-то текст. Какой-то текст.
-                Какой-то текст. Какой-то текст. Какой-то текст. Какой-то текст.
-                Какой-то текст. Какой-то текст. Какой-то текст. Какой-то текст.
-                Какой-то текст. Какой-то текст.
+              {{ question.description }}
               </span>
             </span>
+            {% if question.attachment_path %}
             <div class="admin-question-files">
               <div class="admin-question-container4">
                 <svg viewBox="0 0 1024 1024" class="admin-question-icon4">
@@ -196,35 +193,44 @@
                   ></path>
                 </svg>
                 <a
-                  href="https://example.com"
+                  href="{{ url_for('user.question_attachment_download', question_id=question.id) }}"
                   target="_blank"
                   rel="noreferrer noopener"
                 >
-                  <span>file.jpg</span>
+                  {% set filename_question = question.attachment_path.split('/')[-1] %}
+                  <span>{{ filename_question }}</span>
                 </a>
               </div>
             </div>
+            {% endif %}
           </div>
-          <button class="admin-question-button2 button">Удалить</button>
+          <a href="{{ url_for('admin.question_delete', question_id=question.id) }}" class="admin-question-button2 button" style="background-color: red; color: #c4dfe6ff">Удалить</a>
         </div>
         <div class="admin-question-answers">
+          {% if answers|length != 0 %}
           <h1>Ответы</h1>
+          {% endif %}
+          {% for answer in answers %}
           <div class="admin-answer-card-admin-answer-card">
             <div class="admin-answer-card-user">
               <a href="../user/profile.html" class="admin-answer-card-navlink">
-                <span>Петр Петров</span>
+                <span>{{ answer[1].first_name }} {{ answer[1].last_name }}</span>
               </a>
               <span class="admin-answer-card-text01">
-                <span>20:24</span>
-                <span>24.04.2022</span>
-                <span></span>
+                {% set strdate_ans = answer[0].date_time|string %}
+                {% set date_ans = strdate_ans.split(' ') %}
+                <span>{{ date_ans[0] }}</span>
               </span>
               <span class="admin-answer-card-text05">
-                <span>Верифицирован</span>
+                {% if answer[1].verified %}
+                  <span class="answer-card-text06">Верифицирован</span>
+                  {% else %}
+                  <span class="answer-card-text06">Не верифицирован</span>
+                  {% endif %}
               </span>
-              <button class="admin-answer-card-button button">
+              <a href="{{ url_for('admin.answer_delete', answer_id=answer[0].id) }}" class="admin-answer-card-button button">
                 <span>Удалить</span>
-              </button>
+              </a>
             </div>
             <div class="admin-answer-card-answer">
               <div class="admin-answer-card-raiting">
@@ -242,17 +248,15 @@
                     ></path>
                   </svg>
                 </button>
-                <span><span>+100500</span></span>
+                <span><span>{{ answer[0].rate }}</span></span>
               </div>
               <div class="admin-answer-card-container">
                 <span>
                   <span>
-                    Чел ты... Это же изи! Учи мат. часть! Держи решение в
-                    прикрепленном файле! Какой-то текст. Какой-то текст.
-                    Какой-то текст. Какой-то текст. Какой-то текст. Какой-то
-                    текст. Какой-то текст. Какой-то текст.
+                    {{ answer[0].description }}
                   </span>
                 </span>
+                {% if answer[0].attachment_path %}
                 <div class="admin-answer-card-files">
                   <div class="admin-answer-card-container1">
                     <svg
@@ -264,222 +268,26 @@
                       ></path>
                     </svg>
                     <a
-                      href="https://example.com"
+                      href="{{ url_for('user.answer_attachment_download', answer_id=answer[0].id) }}"
                       target="_blank"
                       rel="noreferrer noopener"
                     >
-                      <span>file.jpg</span>
+                      {% set filename_ans = answer[0].attachment_path.split('/')[-1] %}
+                      <span>{{ filename_ans }}</span>
                     </a>
                   </div>
                 </div>
+                {% endif %}
               </div>
             </div>
           </div>
-          <div class="admin-answer-card-admin-answer-card">
-            <div class="admin-answer-card-user">
-              <a href="../user/profile.html" class="admin-answer-card-navlink">
-                <span>Петр Петров</span>
-              </a>
-              <span class="admin-answer-card-text01">
-                <span>20:24</span>
-                <span>24.04.2022</span>
-                <span></span>
-              </span>
-              <span class="admin-answer-card-text05">
-                <span>Верифицирован</span>
-              </span>
-              <button class="admin-answer-card-button button">
-                <span>Удалить</span>
-              </button>
-            </div>
-            <div class="admin-answer-card-answer">
-              <div class="admin-answer-card-raiting">
-                <button class="admin-answer-card-button1 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon">
-                    <path
-                      d="M170 512l342-342 342 342-62 60-238-238v520h-84v-520l-240 238z"
-                    ></path>
-                  </svg>
-                </button>
-                <button class="admin-answer-card-button2 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon2">
-                    <path
-                      d="M854 512l-342 342-342-342 62-60 238 238v-520h84v520l240-238z"
-                    ></path>
-                  </svg>
-                </button>
-                <span><span>+100500</span></span>
-              </div>
-              <div class="admin-answer-card-container">
-                <span>
-                  <span>
-                    Чел ты... Это же изи! Учи мат. часть! Держи решение в
-                    прикрепленном файле! Какой-то текст. Какой-то текст.
-                    Какой-то текст. Какой-то текст. Какой-то текст. Какой-то
-                    текст. Какой-то текст. Какой-то текст.
-                  </span>
-                </span>
-                <div class="admin-answer-card-files">
-                  <div class="admin-answer-card-container1">
-                    <svg
-                      viewBox="0 0 1024 1024"
-                      class="admin-answer-card-icon4"
-                    >
-                      <path
-                        d="M554 384h236l-236-234v234zM256 86h342l256 256v512q0 34-26 59t-60 25h-512q-34 0-60-25t-26-59l2-684q0-34 25-59t59-25z"
-                      ></path>
-                    </svg>
-                    <a
-                      href="https://example.com"
-                      target="_blank"
-                      rel="noreferrer noopener"
-                    >
-                      <span>file.jpg</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="admin-answer-card-admin-answer-card">
-            <div class="admin-answer-card-user">
-              <a href="../user/profile.html" class="admin-answer-card-navlink">
-                <span>Петр Петров</span>
-              </a>
-              <span class="admin-answer-card-text01">
-                <span>20:24</span>
-                <span>24.04.2022</span>
-                <span></span>
-              </span>
-              <span class="admin-answer-card-text05">
-                <span>Верифицирован</span>
-              </span>
-              <button class="admin-answer-card-button button">
-                <span>Удалить</span>
-              </button>
-            </div>
-            <div class="admin-answer-card-answer">
-              <div class="admin-answer-card-raiting">
-                <button class="admin-answer-card-button1 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon">
-                    <path
-                      d="M170 512l342-342 342 342-62 60-238-238v520h-84v-520l-240 238z"
-                    ></path>
-                  </svg>
-                </button>
-                <button class="admin-answer-card-button2 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon2">
-                    <path
-                      d="M854 512l-342 342-342-342 62-60 238 238v-520h84v520l240-238z"
-                    ></path>
-                  </svg>
-                </button>
-                <span><span>+100500</span></span>
-              </div>
-              <div class="admin-answer-card-container">
-                <span>
-                  <span>
-                    Чел ты... Это же изи! Учи мат. часть! Держи решение в
-                    прикрепленном файле! Какой-то текст. Какой-то текст.
-                    Какой-то текст. Какой-то текст. Какой-то текст. Какой-то
-                    текст. Какой-то текст. Какой-то текст.
-                  </span>
-                </span>
-                <div class="admin-answer-card-files">
-                  <div class="admin-answer-card-container1">
-                    <svg
-                      viewBox="0 0 1024 1024"
-                      class="admin-answer-card-icon4"
-                    >
-                      <path
-                        d="M554 384h236l-236-234v234zM256 86h342l256 256v512q0 34-26 59t-60 25h-512q-34 0-60-25t-26-59l2-684q0-34 25-59t59-25z"
-                      ></path>
-                    </svg>
-                    <a
-                      href="https://example.com"
-                      target="_blank"
-                      rel="noreferrer noopener"
-                    >
-                      <span>file.jpg</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="admin-answer-card-admin-answer-card">
-            <div class="admin-answer-card-user">
-              <a href="../user/profile.html" class="admin-answer-card-navlink">
-                <span>Петр Петров</span>
-              </a>
-              <span class="admin-answer-card-text01">
-                <span>20:24</span>
-                <span>24.04.2022</span>
-                <span></span>
-              </span>
-              <span class="admin-answer-card-text05">
-                <span>Верифицирован</span>
-              </span>
-              <button class="admin-answer-card-button button">
-                <span>Удалить</span>
-              </button>
-            </div>
-            <div class="admin-answer-card-answer">
-              <div class="admin-answer-card-raiting">
-                <button class="admin-answer-card-button1 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon">
-                    <path
-                      d="M170 512l342-342 342 342-62 60-238-238v520h-84v-520l-240 238z"
-                    ></path>
-                  </svg>
-                </button>
-                <button class="admin-answer-card-button2 button">
-                  <svg viewBox="0 0 1024 1024" class="admin-answer-card-icon2">
-                    <path
-                      d="M854 512l-342 342-342-342 62-60 238 238v-520h84v520l240-238z"
-                    ></path>
-                  </svg>
-                </button>
-                <span><span>+100500</span></span>
-              </div>
-              <div class="admin-answer-card-container">
-                <span>
-                  <span>
-                    Чел ты... Это же изи! Учи мат. часть! Держи решение в
-                    прикрепленном файле! Какой-то текст. Какой-то текст.
-                    Какой-то текст. Какой-то текст. Какой-то текст. Какой-то
-                    текст. Какой-то текст. Какой-то текст.
-                  </span>
-                </span>
-                <div class="admin-answer-card-files">
-                  <div class="admin-answer-card-container1">
-                    <svg
-                      viewBox="0 0 1024 1024"
-                      class="admin-answer-card-icon4"
-                    >
-                      <path
-                        d="M554 384h236l-236-234v234zM256 86h342l256 256v512q0 34-26 59t-60 25h-512q-34 0-60-25t-26-59l2-684q0-34 25-59t59-25z"
-                      ></path>
-                    </svg>
-                    <a
-                      href="https://example.com"
-                      target="_blank"
-                      rel="noreferrer noopener"
-                    >
-                      <span>file.jpg</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
         </div>
         <footer class="footer-footer footer-root-class-name13">
           <h1 class="footer-text"><span>SH</span></h1>
           <span class="footer-text1">
             <span>
-              Контакты: admin@mail.ru | +7-(999)-888-77-66 | admin panel |
-              refresh leaderboard
+              Контакты: admin@mail.ru | +7-(999)-888-77-66
             </span>
           </span>
           <div class="footer-icon-group">
